--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <span>30 Day Vanilla JS Coding Challenge</span>
         </div>
         <div class="section">
-            <div class="day done">JS drums</div>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 1 - Drums/index-START.html"><div class="day done">JS drums</div></a>
+            <a href="/30DaysJSChallenge/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
