--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="section">
             <a href="/DAYS/DAY 1 - Drums/index-START.html"><div class="day done">JS drums</div></a>
-            <a href="/30DaysJSChallenge/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
+            <a href="/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
