--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="section">
             <a href="/DAYS/DAY 1 - Drums/index-START.html"><div class="day done">JS drums</div></a>
             <a href="/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 3 - CSS Variables/index-START.html"><div class="day done">JS Variables</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
