--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="/DAYS/DAY 1 - Drums/index-START.html"><div class="day done">JS drums</div></a>
             <a href="/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
             <a href="/DAYS/DAY 3 - CSS Variables/index-START.html"><div class="day done">JS Variables</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 4 - Array Cardio Day 1/index-START.html"><div class="day done">Array Cardio</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
