--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="/DAYS/DAY 2 - Clock/index-START.html"><div class="day done">JS Clock</div></a>
             <a href="/DAYS/DAY 3 - CSS Variables/index-START.html"><div class="day done">JS Variables</div></a>
             <a href="/DAYS/DAY 4 - Array Cardio Day 1/index-START.html"><div class="day done">Array Cardio</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 5 - Flex Panel/index-START.html"><div class="day done">Flex Panels</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
