--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="/DAYS/DAY 5 - Flex Panel/index-START.html"><div class="day done">Flex Panels</div></a>
             <a href="/DAYS/DAY 6 - Type Ahead/index-START.html"><div class="day done">Type Ahead</div></a>
             <a href="/DAYS/DAY 7 - Array Cardio Day 2/index-START.html"><div class="day done">Array Cardio 2</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 8 - Fun with HTML5 Canvas/index-START.html"><div class="day done">Fun with Canvas</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
