--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="/DAYS/DAY 7 - Array Cardio Day 2/index-START.html"><div class="day done">Array Cardio 2</div></a>
             <a href="/DAYS/DAY 8 - Fun with HTML5 Canvas/index-START.html"><div class="day done">Fun with Canvas</div></a>
             <a href="/DAYS/DAY 9  - Dev Tools/index-START.html"><div class="day done">Dev Tools</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 10 - Hold Shift and Check Checkboxes/index-START.html"><div class="day done">Hold Shift</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
