--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="/DAYS/DAY 9  - Dev Tools/index-START.html"><div class="day done">Dev Tools</div></a>
             <a href="/DAYS/DAY 10 - Hold Shift and Check Checkboxes/index-START.html"><div class="day done">Hold Shift</div></a>
             <a href="/DAYS/DAY 11 - Custom Player/index.html"><div class="day done">Custom Player</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 12 - Konami Code/index-START.html"><div class="day done">Doom Code</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
