--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="/DAYS/DAY 10 - Hold Shift and Check Checkboxes/index-START.html"><div class="day done">Hold Shift</div></a>
             <a href="/DAYS/DAY 11 - Custom Player/index.html"><div class="day done">Custom Player</div></a>
             <a href="/DAYS/DAY 12 - Konami Code/index-START.html"><div class="day done">Doom Code</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 13 - Slide in on Scroll/index-START.html"><div class="day done">Slide Scroll</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
