--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="/DAYS/DAY 11 - Custom Player/index.html"><div class="day done">Custom Player</div></a>
             <a href="/DAYS/DAY 12 - Konami Code/index-START.html"><div class="day done">Doom Code</div></a>
             <a href="/DAYS/DAY 13 - Slide in on Scroll/index-START.html"><div class="day done">Slide Scroll</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 14 - Reference VS Copy/index-START.html"><div class="day done">Reference VS Copy</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
