--- a/DAYS/DAY 15 - Local Storage/index-START.html
+++ b/DAYS/DAY 15 - Local Storage/index-START.html
@@ -40,7 +40,7 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
-    <button class="add-items" onclick="markUnmarkAll()">Select All</button>
+    <button class="add-items" onclick="markUnmarkAll()">Mark/Unmark All</button>
     <button class="add-items" onClick="deleteAll()">Delete All</button>
   </div>
 
