--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="/DAYS/DAY 13 - Slide in on Scroll/index-START.html"><div class="day done">Slide Scroll</div></a>
             <a href="/DAYS/DAY 14 - Reference VS Copy/index-START.html"><div class="day done">Reference VS Copy</div></a>
             <a href="/DAYS/DAY 15 - Local Storage/index-START.html"><div class="day done">Local Storage</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 16 -Mouse Shadow/ "><div class="day done">Mouse Shadow</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
