--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="/DAYS/DAY 14 - Reference VS Copy/index-START.html"><div class="day done">Reference VS Copy</div></a>
             <a href="/DAYS/DAY 15 - Local Storage/index-START.html"><div class="day done">Local Storage</div></a>
             <a href="/DAYS/DAY 16 - Mouse Shadow/index-START.html"><div class="day done">Mouse Shadow</div></a>
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 17 - Sort/index-START.html"><div class="day done">Sort</div></a>
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
