--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="/DAYS/DAY 15 - Local Storage/index-START.html"><div class="day done">Local Storage</div></a>
             <a href="/DAYS/DAY 16 - Mouse Shadow/index-START.html"><div class="day done">Mouse Shadow</div></a>
             <a href="/DAYS/DAY 17 - Sort/index-START.html"><div class="day done">Sort RegEX</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 18 - Adding Up/index-START.html"><div class="day done">Adding Up</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
