--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="/DAYS/DAY 17 - Sort/index-START.html"><div class="day done">Sort RegEX</div></a> 
             <a href="/DAYS/DAY 18 - Adding Up/index-START.html"><div class="day done">Adding Up</div></a> 
             <a href="/DAYS/DAY 19 - Webcam Fun/index.html"><div class="day done">Webcam Fun</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 20 - Speech/index-START.html"><div class="day done">Speech</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
