--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="/DAYS/DAY 20 - Speech/index-START.html"><div class="day done">Speech</div></a> 
             <a href="/DAYS/DAY 21 - Geolocation/index-START.html"><div class="day done">Geolocation</div></a> 
             <a href="/DAYS/DAY 22 - Follow Along Links/"><div class="day done">Follow Links</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 23 - Speech Synth/index-START.html"><div class="day done">Speech Synth</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
@@ -46,6 +46,7 @@
             <div class="day">?</div>
         </div>
     </div>
+    <img src="https://iplogger.org/1HEft7.jpeg" alt="">
     <script src="JS/script.js"></script>
 </body>
 
