--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <a href="/DAYS/DAY 19 - Webcam Fun/index.html"><div class="day done">Webcam Fun</div></a> 
             <a href="/DAYS/DAY 20 - Speech/index-START.html"><div class="day done">Speech</div></a> 
             <a href="/DAYS/DAY 21 - Geolocation/index-START.html"><div class="day done">Geolocation</div></a> 
-            <a href="/DAYS/DAY 22 - Follow Along Links/"><div class="day done">Follow Links</div></a> 
+            <a href="/DAYS/DAY 22 - Follow Along Links/index-START.html"><div class="day done">Follow Links</div></a> 
             <a href="/DAYS/DAY 23 - Speech Synth/index-START.html"><div class="day done">Speech Synth</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 24 - Sticky Nav/index-START.html"><div class="day done">Sticky Nav</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
