--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="/DAYS/DAY 22 - Follow Along Links/index-START.html"><div class="day done">Follow Links</div></a> 
             <a href="/DAYS/DAY 23 - Speech Synth/index-START.html"><div class="day done">Speech Synth</div></a> 
             <a href="/DAYS/DAY 24 - Sticky Nav/index-START.html"><div class="day done">Sticky Nav</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 25 - Events/index-START.html"><div class="day done">Events</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
