--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="/DAYS/DAY 23 - Speech Synth/index-START.html"><div class="day done">Speech Synth</div></a> 
             <a href="/DAYS/DAY 24 - Sticky Nav/index-START.html"><div class="day done">Sticky Nav</div></a> 
             <a href="/DAYS/DAY 25 - Events/index-START.html"><div class="day done">Events</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 26 - Stripe Nav/index-START.html"><div class="day done">Stripe Nav</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
