--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="/DAYS/DAY 24 - Sticky Nav/index-START.html"><div class="day done">Sticky Nav</div></a> 
             <a href="/DAYS/DAY 25 - Events/index-START.html"><div class="day done">Events</div></a> 
             <a href="/DAYS/DAY 26 - Stripe Nav/index-START.html"><div class="day done">Stripe Nav</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 27 - Click Drag/index-START.html"><div class="day done">Click/Drag</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
             <div class="day">?</div>
