--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <a href="/DAYS/DAY 25 - Events/index-START.html"><div class="day done">Events</div></a> 
             <a href="/DAYS/DAY 26 - Stripe Nav/index-START.html"><div class="day done">Stripe Nav</div></a> 
             <a href="/DAYS/DAY 27 - Click Drag/index-START.html"><div class="day done">Click/Drag</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 27 - Click Drag/index-START.html"><div class="day done">Click/Drag</div></a> 
+            <a href="/DAYS/DAY 28 - Video Speed/index-START.html"><div class="day done">Video Speed</div></a> 
             <div class="day">?</div>
             <div class="day">?</div>
         </div>
