--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="/DAYS/DAY 27 - Click Drag/index-START.html"><div class="day done">Click/Drag</div></a> 
             <a href="/DAYS/DAY 28 - Video Speed/index-START.html"><div class="day done">Video Speed</div></a> 
             <a href="/DAYS/DAY 29 - Countdown/index.html"><div class="day done">Countdown</div></a> 
-            <div class="day">?</div>
+            <a href="/DAYS/DAY 30 - Game/index-START.html"><div class="day done">Game</div></a> 
         </div>
     </div>
     <img src="https://iplogger.org/1HEft7.jpeg" alt="">
